// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header2 /> renders the component with props 1`] = `
.c0 {
  font-weight: normal;
  font-size: 32px;
  line-height: 48px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-family: Alverata,"Arial Black",Verdana,sans-serif;
}

<h2
  class="c0"
  style="text-align: center;"
>
  I'm an h2 header
</h2>
`;

exports[`<Header2 /> renders the component without props 1`] = `
.c0 {
  font-weight: normal;
  font-size: 32px;
  line-height: 48px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-family: Alverata,"Arial Black",Verdana,sans-serif;
}

<h2
  class="c0"
>
  I'm an h2 header
</h2>
`;
